# vncpasswd.py

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.bdist_rpm  LICENSE  MANIFEST.in  Makefile  Manifest.in  README.md  WindowsRegistry.py  pass2reg.cmd  pyproject.toml  setup.cfg  setup.py  vnc_hash.py  vncpasswd.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: create-release.yml
WindowsRegistry/: WindowsRegistry.py  __init__.py
d3des/: __init__.py  d3des.py  d3des.rb
