[tool.poetry]
name = "vncpasswd.py"
version = "1.2.3"
description = "A Python implementation of vncpasswd, w/decryption abilities & extra features ;-)"
authors = ["James Cuzella <james.cuzella@lyraphase.com>"]
license = "License :: OSI Approved :: MIT License"

[tool.poetry.dependencies]
python = "<=2.7"

[tool.poetry.dev-dependencies]
m2r = "0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
